# texlyre-plugins

./: .env  mockup.html  package-lock.json  package.json  plugins.config.js  texlyre.config.ts  userdata.json  userdata.local.json  userdata.local.mobile.json  userdata.mobile.json  vite.config.ts
docs/: google-integration-plan.md  sync-server-plan.md
extras/backup/google-drive/: GoogleDriveIcon.tsx  GoogleDriveModal.tsx  GoogleDrivePlugin.ts  GoogleDriveService.ts  GoogleDriveStatusIndicator.tsx  README.md  index.ts  settings.ts
extras/collaborative_viewers/excalidraw/: ExcalidrawPlugin.ts  ExcalidrawViewer.tsx  README.md  index.ts
extras/themes/modern/: ModernThemePlugin.ts  (+3 more)
plugins/: sync-server.ts
scripts/: generate-plugins-index.js
server/: .env  .env.example  Dockerfile  docker-compose.yml  dune-project  package-lock.json  package.json  server.js
server/lib/: auth.ml  config.ml  dune  hub.ml  routes.ml  store.ml  syncer.ml
src/: App.tsx  main.tsx
src/contexts/: AuthContext.tsx  CollabContext.tsx  EditorContext.tsx  FileSyncContext.tsx  FileTreeContext.tsx  LaTeXContext.tsx  ServerModeContext.tsx  SyncServerContext.tsx  TypstContext.tsx
src/hooks/: useDriveAutoSync.ts  useServerSync.ts  useSyncServer.ts
src/services/: AuthService.ts  CollabService.ts  FileStorageService.ts  GoogleAuthService.ts  GoogleDriveService.ts  ServerSyncService.ts  SyncConnection.ts  SyncServerService.ts
src/styles/: global.css
src/types/: auth.ts  latex.ts  projects.ts  sync.ts  typst.ts  userdata.ts
src/utils/: autoSaveUtils.ts
translations/: languages.config.json
(+48 files in other folders)
